After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 670760 - ephy-bookmarks-ui: fix typo in activate_bookmarks_menu
ephy-bookmarks-ui: fix typo in activate_bookmarks_menu
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-02-24 18:46 UTC by Diego Escalante Urrelo (not reading bugmail)
Modified: 2012-02-25 19:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ephy-bookmarks-ui: fix typo in activate_bookmarks_menu (1.09 KB, patch)
2012-02-24 18:46 UTC, Diego Escalante Urrelo (not reading bugmail)
committed Details | Review

Description Diego Escalante Urrelo (not reading bugmail) 2012-02-24 18:46:15 UTC
Small typo
Comment 1 Diego Escalante Urrelo (not reading bugmail) 2012-02-24 18:46:17 UTC
Created attachment 208371 [details] [review]
ephy-bookmarks-ui: fix typo in activate_bookmarks_menu
Comment 2 Xan Lopez 2012-02-24 19:54:58 UTC
Review of attachment 208371 [details] [review]:

OK.
Comment 3 Diego Escalante Urrelo (not reading bugmail) 2012-02-25 19:58:21 UTC
Attachment 208371 [details] pushed as cbe450a - ephy-bookmarks-ui: fix typo in activate_bookmarks_menu