ephy-bookmarks-ui: fix typo in activate_bookmarks_menu

https://bugzilla.gnome.org/show_bug.cgi?id=670760